--- a/src/sass/_ngAnimate.sass
+++ b/src/sass/_ngAnimate.sass
@@ -1,10 +1,10 @@
 .page
     background-color: white
-    position: absolute
-    left: 0
-    top: 30px
-    bottom: 0
-    width: 100%
+    // position: absolute
+    // left: 0
+    // top: 30px
+    // bottom: 0
+    // width: 100%
 
     &.ng-enter
         animation: slideInRight .5s both ease-in
