grid & cards OK

--- a/src/sass/_ngAnimate.sass
+++ b/src/sass/_ngAnimate.sass
@@ -1,16 +1,9 @@
-.page
-    background-color: white
-    // position: absolute
-    // left: 0
-    // top: 30px
-    // bottom: 0
-    // width: 100%
-
-    &.ng-enter
-        animation: slideInRight .5s both ease-in
-
-    &.ng-leave
-        animation: slideOutLeft .5s both ease-in
+// enter animation
+.ng-enter
+    animation: slideInRight .5s both ease-in
+// leave animation
+.ng-leave
+    animation: slideOutLeft .5s both ease-in
 
 
 //  slide in from the right
