--- a/src/sass/_reset.sass
+++ b/src/sass/_reset.sass
@@ -6,3 +6,12 @@
 html
     overflow-x: hidden
     width: 100%
+    font-size: 18px    
+
+body
+    font-family: sans-serif
+    font-size: 1rem
+    line-height: 1.6
+
+p, h1, h2, h3
+    padding: .3em 0
