--- a/src/sass/_ngAnimate.sass
+++ b/src/sass/_ngAnimate.sass
@@ -1,9 +1,9 @@
 // enter animation
 .ng-enter
-    animation: slideInRight .5s both ease-in
+    animation: slideInRight 1s both cubic-bezier(0.8, -0.2, 0.5, 1.2)
 // leave animation
 .ng-leave
-    animation: slideOutLeft .5s both ease-in
+    animation: slideOutLeft 1s both cubic-bezier(0.8, -0.2, 0.5, 1.2)
 
 
 //  slide in from the right
@@ -19,4 +19,3 @@
         transform: translateX(0)
     to
         transform: translateX(-100%)
-
