--- a/src/sass/_cards.sass
+++ b/src/sass/_cards.sass
@@ -4,16 +4,18 @@
     border-radius: .2rem
     overflow: hidden
 
-    & > div
+    & > div, & > a
         padding: .5rem 1rem
+        display: block
+        color: inherit
+        text-decoration: none
 
-        &:not(:last-child)
-            &.card-line, &.card-header, &.card-disabled
-                border-bottom: 1px solid rgba($dark, .2)
+        &:not(:last-child), &:not(.divider)
+            border-bottom: 1px solid rgba($dark, .2)
         
         &.card-header
             font-weight: bold
-            text-align: center
+            // text-align: center
             padding: .8rem 1rem .5rem 1rem
             font-size: 1.3rem
             color: $pink
@@ -36,5 +38,11 @@
                 cursor: pointer
             &:active
                 background-color: darken($white, 15%)
+        
+        &.card-img
+            padding: 0
+            img
+                display: block
+                width: 100%
 
         
