--- a/src/sass/_reset.sass
+++ b/src/sass/_reset.sass
@@ -6,7 +6,11 @@
 html
     overflow-x: hidden
     width: 100%
-    font-size: 18px    
+    font-size: 18px
+    @media(max-width: $medium-size)
+        font-size: 16px
+    @media(max-width: $small-size)
+        font-size: 14px  
 
 body
     font-family: sans-serif
