--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -3,9 +3,11 @@ $dark: #333
 $white: #f2f2f2
 $bg-card: #d8d9d8
 
-// $green: #4c7
-$green: #2b6
+$green: #4a4
 
 $pink: #e27
 
 $sidebar-width: 250px
+
+$medium-size: 1080px
+$small-size: 720px
