--- a/src/sass/_cards.sass
+++ b/src/sass/_cards.sass
@@ -9,6 +9,7 @@
         display: block
         color: inherit
         text-decoration: none
+        position: relative
 
         &:not(:last-child), &:not(.divider)
             border-bottom: 1px solid rgba($dark, .2)
@@ -44,5 +45,28 @@
             img
                 display: block
                 width: 100%
+
+        &.icon-left
+            padding-left: 65px
+            @media(max-width: $small-size)
+                padding-left: 40px
+        &.icon-right
+            padding-right: 65px
+            @media(max-width: $small-size)
+                padding-right: 40px
+        
+        .left-icon, .right-icon
+            position: absolute
+            left: 0
+            top: 50%
+            transform: translateY(-50%)
+            width: 65px
+            text-align: center
+            @media(max-width: $small-size)
+                width: 40px
+        
+        .right-icon
+            left: auto
+            right: 0
 
         
