card-cta + ngDialog + addToCart begun

--- a/src/sass/_cards.sass
+++ b/src/sass/_cards.sass
@@ -45,6 +45,12 @@
             img
                 display: block
                 width: 100%
+        &.card-cta
+            background-color: $green
+            color: white
+            font-weight: 700
+            text-align: center
+            cursor: pointer
 
         &.icon-left
             padding-left: 65px
