--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -66,3 +66,44 @@ small
 
 .transparent
     opacity: .4
+
+
+.input-group
+    label
+        display: block
+        font-variant: small-caps
+        font-weight: 500
+        font-size: .8rem
+
+    input[type="text"]
+        display: block
+        border: none
+        border-bottom: 1px solid $dark
+        outline: none
+        padding: 12px 0 6px
+        width: 100%
+        font-size: 1rem
+        transition: border-bottom .3s
+        &:focus
+            border-bottom: 2px solid $green
+
+.materialCircleButton
+    position: absolute
+    bottom: 50px
+    right: 50px
+    &:before
+        content: "+"
+        display: block
+        width: 60px
+        height: 60px
+        line-height: 60px
+        font-size: 2rem
+        text-align: center        
+        color: $white
+        background: $green
+        cursor: pointer
+        border-radius: 30px
+
+
+
+        
