--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -2,8 +2,10 @@
 
 @import 'reset'
 @import 'ngAnimate'
+@import 'ngDialog'
 @import 'general'
 @import 'menu'
 
 @import 'grid'
 @import 'cards'
+    
