--- a/src/sass/_ngDialog.sass
+++ b/src/sass/_ngDialog.sass
@@ -25,6 +25,7 @@
 
 .ngdialog-content
   // background: $white
+  background: transparent
   animation: ngdialog-enter 0.5s
   pointer-events: all
   position: absolute
@@ -58,6 +59,7 @@ html.ngdialog-open, body.ngdialog-open
   0%
     opacity: 1
     margin-top: 0
+
   100%
     opacity: 0
     margin-top: -20px
