--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -102,7 +102,9 @@ small
         color: $white
         background: $green
         cursor: pointer
-        border-radius: 30px
+        border-radius: 50%
+        box-shadow: 0 5px 10px rgba($dark, .3)
+
 
 
 
