better hover concept on cart deletion icon & not implemented popup

--- a/src/sass/_cards.sass
+++ b/src/sass/_cards.sass
@@ -17,11 +17,11 @@
         &.card-header
             font-weight: bold
             // text-align: center
-            font-variant: small-caps
+            // font-variant: small-caps
             padding: .8rem 1rem .5rem 1rem
             font-size: 1.3rem
             color: $pink
-            text-transform: capitalize
+            // text-transform: capitalize
 
         &.card-divider
             background-color: darken($white, 10%)
