--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -105,6 +105,14 @@ small
         border-radius: 50%
         box-shadow: 0 5px 10px rgba($dark, .3)
 
+    @media(max-width: $medium-size)
+        bottom: 15px
+        right: 15px
+        &:before
+            width: 50px
+            height: 50px
+            line-height: 50px
+
 
 
 
