about page & mobile menu burger improvment

--- a/src/sass/_menu.sass
+++ b/src/sass/_menu.sass
@@ -33,14 +33,15 @@
                 content: "\2630"
                 position: absolute
                 top: 0
-                left: 101%
-                width: 50px
+                left: 100%
+                width: 60px
                 height: 60px
-                font-size: 40px
+                font-size: 30px
                 line-height: 60px
                 text-align: center
                 color: $white
-                background: $green
+                background: rgba($green, 0.7)
+                border-bottom-right-radius: 6px
                 
         &.menu-visible
             .menu
