--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -4,7 +4,9 @@ $white: #f2f2f2
 $silver: #d8d9d8
 $gray: #a5a5a5
 
-$green: #4a4
+// $green: #4a4
+// $green: #A2CB00
+$green: #7fb300
 
 $pink: #e27
 
