added team to about page

--- a/src/sass/_cards.sass
+++ b/src/sass/_cards.sass
@@ -53,6 +53,18 @@
             text-align: center
             cursor: pointer
 
+        &.card-avatar
+            padding: 1.5rem .8rem 1.5rem 8rem
+            img
+                display: block
+                position: absolute
+                top: 1rem
+                left: 1rem
+                width: 6rem
+                height: 6rem
+                border-radius: 50%
+
+
         &.icon-left
             padding-left: 65px
             @media(max-width: $small-size)
